# sf-election-historical-counts

./: .gitignore  CITATION.cff  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.base.json  vitest.config.ts  vitest.setup.ts
artifact/: sf-long-count.jsx
data/: README.md  elections_master.csv  manifest.csv  mirror_manifest.csv  newsbank_issue_docrefs.json  pre1892_certified.md  recovery_ledger_pre1965.md  sf_archival_canvass_points.csv  sf_canvass_minutes_statements.csv  sf_count_timeline.csv  sf_days_to_90.csv  sf_elections_consolidated.csv  sf_eligible_vap_estimate.csv  sf_franchise_by_election.csv  sf_night_floor_1964_2026.csv  sf_registration_eligible_sov_1974_1998.csv  sf_turnout_1891_1907.csv  sf_turnout_pre1899.csv  sf_turnout_registrar_1899_1916.csv  sf_turnout_reused_registration_1917_1945.csv  sf_vote_by_district_1856_1863.csv  sov_crosscheck_ledger.md
docs/: archive-recovery-runbook.md  denominator-errors.md  doe-data-discrepancies.md  doe-records-request.md  eligible-denominator-notes.md  missing.md  sources.md
scripts/: build_consolidated_export.py  build_county_night.py  build_elections_master.py  build_franchise_csv.py  build_sd_history.py  build_viz_data.py  cdx_phase1.py  extract_sf_ballot.py  fetch_chronicle.py  fetch_phase2.py  fetch_sos_registration.py  final_csv.py  gen_docs.py  nhgis_extract.json  nhgis_extract_citizenship.json  recover_sov_registration.py  scan_chronicle.py  shoot_charts.cjs  shoot_charts.js  sweep_2000_2007.py  sweep_targeted.py
sf-long-count-archive/: README.md  sf-long-count.jsx  (+4 more)
(+398 files in other folders)
