[project]
name = "sfcount"
version = "1.0.0"
description = "SF vote-count timeline pipeline: how long San Francisco takes to count ballots"
requires-python = ">=3.12"
dependencies = ["requests>=2.31"]

[project.scripts]
sfcount = "sfcount.cli:main"

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sfcount"]

[tool.pytest.ini_options]
addopts = "-m 'not network and not migration'"
markers = [
    "network: hits sfelections.org live (run explicitly: pytest -m network)",
    "migration: one-time reconciliation against sf-long-count-archive (needs data/; pytest -m migration)",
]
